--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <input type="text" name="" id="input-box" placeholder="Add your text">
         <button>Add</button>
       </div>
-      <!-- <ul class="list-container">
-        <li class="checked">task 1</li>
+      <ul class="list-container">
+        <!-- <li class="checked">task 1</li>
         <li>task 2</li>
-        <li>task 3</li>
-      </ul> -->
+        <li>task 3</li> -->
+      </ul>
     </div>
 
   </div>
